Revision history for LucyX-Search-NullTermQuery

0.001    08 June 2013
        Initial release.

0.002    08 June 2013
        * administrative release only

0.003   xxx
        * add parens around to_string() output